# TableViewExample

./: .gitignore  CMakeLists.txt  README.md
include/: Adapters.h  CommonStructs.h  DataModel.h  IAdapter.h  QMLAdapter.h  TableModel.h
src/: Adapters.cpp  ChooseMeControl.qml  CommonStructs.cpp  DataModel.cpp  IAdapter.cpp  QMLAdapter.cpp  TableModel.cpp  main.cpp  main.qml  qml.qrc
